deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configee-web
  namespace: configee
spec:
  selector:
    app: configee-web
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: configee-api
  namespace: configee
spec:
  selector:
    app: configee-api
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: configee-nginx
  namespace: configee
spec:
  selector:
    app: configee-nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
