deploy/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: configee-nginx-ingress
  namespace: configee
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - nginx
  routes:
    - match: Host(`configee.staging.ezlab.ru`)
      kind: Rule
      services:
        - name: configee-nginx
          port: 80
    - match: Host(`configee.staging.box.ezlab.ru`)
      kind: Rule
      services:
        - name: configee-nginx
          port: 80
